// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation Form - Renders Correctly 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create League"
  />
   
  <div>
    <h1>
      Create League
    </h1>
     
    <!---->
     
    <form>
      <label>
        Name:
      </label>
       
      <input
        type="text"
      />
       
      <label>
        Description:
      </label>
       
      <input
        type="text"
      />
       
      <label>
        Website:
      </label>
       
      <input
        type="text"
      />
       
      <label>
        Logo (URL):
      </label>
       
      <input
        type="text"
      />
       
      <label>
        Coordinator:
      </label>
       
      <input
        type="text"
      />
       
      <label>
        Scoring Method:
      </label>
       
      <dropdown-input-stub
        label=""
        list="Position Based (100 Max),Position Based (50 Max),Position Based (99 Max),Position Based (99 Max - Reduced in a Draw)"
        value=""
      />
       
      <label>
        Number of Events to Count:
      </label>
       
      <input
        inputmode="numeric"
        min="1"
        pattern="[0-9]*"
        type="text"
      />
       
      <label>
        Courses: (Comma Separated)
      </label>
       
      <input
        type="text"
      />
       
      <button>
        Create League
      </button>
       
      <!---->
    </form>
  </div>
   
  <!---->
</div>
`;

exports[`Update Form - Renders Correctly 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit League"
  />
   
  <div>
    <!---->
     
    <h1>
      Edit League
    </h1>
     
    <form>
      <label>
        Name:
      </label>
       
      <input
        type="text"
      />
       
      <label>
        Description:
      </label>
       
      <input
        type="text"
      />
       
      <label>
        Website:
      </label>
       
      <input
        type="text"
      />
       
      <label>
        Logo (URL):
      </label>
       
      <input
        type="text"
      />
       
      <label>
        Coordinator:
      </label>
       
      <input
        type="text"
      />
       
      <label>
        Scoring Method:
      </label>
       
      <dropdown-input-stub
        label=""
        list="Position Based (100 Max),Position Based (50 Max),Position Based (99 Max),Position Based (99 Max - Reduced in a Draw)"
        value=""
      />
       
      <label>
        Number of Events to Count:
      </label>
       
      <input
        inputmode="numeric"
        min="1"
        pattern="[0-9]*"
        type="text"
      />
       
      <label>
        Courses: (Comma Separated)
      </label>
       
      <input
        type="text"
      />
       
      <!---->
       
      <button>
        Update League
      </button>
    </form>
  </div>
   
  <!---->
</div>
`;
